--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,17 @@
 @import "bootstrap";
 @import "font-awesome";
 
-@import "variables"
+@import "variables";
+
+@font-face{
+    font-family:FontAwesome;
+    src:url(bower_components/font-awesome/fonts/fontawesome-webfont.eot?v=4.6.3);
+    src:url(bower_components/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.6.3) format("embedded-opentype"),
+    url(bower_components/font-awesome/fonts/fontawesome-webfont.woff2?v=4.6.3) format("woff2"),
+    url(bower_components/font-awesome/fonts/fontawesome-webfont.woff?v=4.6.3) format("woff"),
+    url(bower_components/font-awesome/fonts/fontawesome-webfont.ttf?v=4.6.3) format("truetype"),
+    url(bower_components/font-awesome/fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular) format("svg");
+}
 
 /* 
 =============================================================================
